trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -142,6 +142,8 @@ button{
         top: 25%;
         left: 0%;
         background-color: red;
+        background-image: url(../img/img1.jpg);
+        background-size: contain;
         opacity: 75%;
         vertical-align: top;
 
@@ -197,6 +199,7 @@ button{
         width: 30%;
         height: 20%;
         background-color: pink;
+        background-image: url(../img/img2.jpg);
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 25px;
         position: absolute;
